<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.vitaliy.deletedoto.Main2Activity">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintVertical_bias="0.0"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="ScrollViewSize">

            <EditText
                android:id="@+id/hMMR"
                android:layout_width="121dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="7dp"
                android:ems="10"
                android:inputType="number"
                app:layout_constraintHorizontal_bias="0.93"
                app:layout_constraintLeft_toRightOf="@+id/textView11"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/gPDay"
                tools:ignore="LabelFor" />

            <EditText
                android:id="@+id/editText13"
                android:layout_width="121dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="7dp"
                android:ems="10"
                android:inputType="number"
                app:layout_constraintHorizontal_bias="0.894"
                app:layout_constraintLeft_toRightOf="@+id/Donate"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/hMMR"
                tools:ignore="LabelFor" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="7dp"
                android:background="@android:color/holo_blue_dark"
                android:gravity="center_horizontal"
                android:text="@string/Form"
                android:textColor="@android:color/background_dark"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="HardcodedText,MissingConstraints"
                tools:layout_constraintLeft_creator="1"
                tools:layout_constraintRight_creator="1" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:text="@string/DLGame"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                tools:ignore="RtlHardcoded" />

            <ImageButton
                android:id="@+id/Date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="65dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="65dp"
                android:layout_marginTop="6dp"
                app:layout_constraintHorizontal_bias="0.051"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/Clock"
                app:layout_constraintTop_toBottomOf="@+id/textView4"
                app:srcCompat="@mipmap/ic_launcher"
                tools:ignore="ContentDescription,RtlHardcoded" />

            <ImageButton
                android:id="@+id/Clock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="65dp"
                android:layout_marginRight="65dp"
                android:layout_marginTop="7dp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4"
                app:srcCompat="@mipmap/ic_launcher"
                tools:ignore="ContentDescription,RtlHardcoded" />

            <TextView
                android:id="@+id/DateTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:text="@string/DateTV"
                android:textSize="20sp"
                app:layout_constraintLeft_toLeftOf="@+id/Date"
                app:layout_constraintRight_toRightOf="@+id/Date"
                app:layout_constraintTop_toBottomOf="@+id/Date"
                tools:ignore="RtlHardcoded"
                tools:layout_constraintLeft_creator="1"
                tools:layout_constraintTop_creator="1" />

            <TextView
                android:id="@+id/TimeTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="6dp"
                android:text="@string/CllockTV"
                android:textSize="20sp"
                app:layout_constraintHorizontal_bias="0.352"
                app:layout_constraintLeft_toLeftOf="@+id/Clock"
                app:layout_constraintRight_toRightOf="@+id/Clock"
                app:layout_constraintTop_toBottomOf="@+id/Clock"
                tools:ignore="RtlHardcoded"
                tools:layout_constraintLeft_creator="1"
                tools:layout_constraintTop_creator="1" />

            <Button
                android:id="@+id/CurrentDT"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:background="@android:color/holo_blue_dark"
                android:text="@string/GNTime"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/TimeTV" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="0dp"
                android:layout_height="24dp"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="29dp"
                android:text="@string/gLength"
                android:textSize="20sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/CurrentDT"
                tools:ignore="RtlHardcoded" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="25dp"
                android:text="@string/gPDay"
                android:textSize="20sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView9"
                tools:ignore="RtlHardcoded" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/topMMR"
                android:textSize="20sp"
                app:layout_constraintLeft_toLeftOf="@+id/textView10"
                app:layout_constraintTop_toBottomOf="@+id/textView10"
                tools:ignore="RtlHardcoded" />

            <TextView
                android:id="@+id/Donate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/donate"
                android:textSize="20sp"
                app:layout_constraintLeft_toLeftOf="@+id/textView11"
                app:layout_constraintTop_toBottomOf="@+id/textView11"
                tools:ignore="RtlHardcoded" />

            <EditText
                android:id="@+id/gPDay"
                android:layout_width="121dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="6dp"
                android:ems="10"
                android:inputType="number"
                app:layout_constraintHorizontal_bias="0.914"
                app:layout_constraintLeft_toRightOf="@+id/textView10"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/gLength"
                tools:ignore="LabelFor" />

            <EditText
                android:id="@+id/gLength"
                android:layout_width="121dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="15dp"
                android:ems="10"
                android:inputType="number"
                app:layout_constraintHorizontal_bias="0.82"
                app:layout_constraintLeft_toRightOf="@+id/textView9"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/CurrentDT"
                tools:ignore="LabelFor" />

        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>
